# freeflow

./: .gitignore  pyproject.toml  readme.md
examples/caltech_courses/: .gitignore  free_flow  options.xml  parse.py
free_flow/: __init__.py  lib.py  segments.py
