[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freeflow"
version = "0.0.1"
authors = [
  { name="Exr0n", email="hi@exr0n.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Exr0nProjects/freeflow"
"Bug Tracker" = "https://github.com/Exr0nProjects/freeflow/issues"